pratice input for playing card component and add search bar component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,5 @@
-<app-playing-card/>
+<app-search-bar/>
+<div id="card-list">
+    <app-playing-card/>
+    <app-playing-card [monster]="monster1"/>
+</div>
