--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
 <div id="search-bar">
-    <input placeholder="Search...">
-    <button><img src="/img/search.png"></button>
+    <input placeholder="Search..." [ngModel]="search" (ngModelChange)="updateSearch($event)">
+    <button (click)="searchClick()"><img src="/img/search.png"></button>
 </div>
