--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,4 @@
-<app-search-bar 
-(searchButtonClicked)="increaseCount()"
-(searchChange)="search = $event"
-/>
-Search:{{search}} <br />
-Click count: {{count}}
+<button (click)="toggleMonster()">Toggle Monster</button>
 <div id="card-list">
-    <app-playing-card/>
-    <app-playing-card [monster]="monster1"/>
+    <app-playing-card [monster]="monsters[selectedMonsterIndex]"/>
 </div>
