--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
-<button (click)="toggleMonster()">Toggle Monster</button>
+<app-search-bar [(search)]="search"></app-search-bar>
 <div id="card-list">
-    <app-playing-card [monster]="selectedMonster()"/>
+    <app-playing-card *ngFor="let monster of filteredMonsters()" [monster]="monster"/>
 </div>
+<div *ngIf="filteredMonsters().length == 0" class="center">No monsters found !</div>
+<div *ngIf="filteredMonsters().length != 0" class="center">Found {{filteredMonsters().length}} monsters !</div>
