--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,5 +2,11 @@
 <div id="card-list">
     <app-playing-card *ngFor="let monster of filteredMonsters()" [monster]="monster"/>
 </div>
-<div *ngIf="filteredMonsters().length == 0" class="center">No monsters found !</div>
-<div *ngIf="filteredMonsters().length != 0" class="center">Found {{filteredMonsters().length}} monsters !</div>
+<div *ngIf="filteredMonsters().length == 0; then notFound else found" class="center"></div>
+<ng-template #notFound>
+    <div class="center">No monsters found !</div>
+</ng-template>
+<ng-template #found>
+    <div class="center">Found {{filteredMonsters().length}} monsters !</div>
+</ng-template>
+
