--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,11 @@
 <app-search-bar [(search)]="search"></app-search-bar>
 <div id="card-list">
-    <app-playing-card *ngFor="let monster of filteredMonsters()" [monster]="monster"/>
+    @for (monster of filteredMonsters(); track monster) {
+        <app-playing-card [monster]="monster"/>
+    }
 </div>
-<div *ngIf="filteredMonsters().length == 0; then notFound else found" class="center"></div>
-<ng-template #notFound>
+@if (filteredMonsters().length == 0) {
     <div class="center">No monsters found !</div>
-</ng-template>
-<ng-template #found>
+} @else {
     <div class="center">Found {{filteredMonsters().length}} monsters !</div>
-</ng-template>
-
+}
